refactor and clean up circular references